[package]
name = "scritch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
directories = "6.0.0"
owo-colors = { version = "4.2.1", features = ["supports-colors"] }
reqwest = { version = "0.12.15", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
textwrap = { version = "0.16.2", features = ["terminal_size"] }
toml = "0.8.22"
