[package]
name = "scritch"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "6.0.0"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = { version = "4.2.1", features = ["supports-colors"] }
reqwest = { version = "0.12.15", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0.12"
toml = "0.8.22"
